# ArgobotsReduction

./: README.md
08_04_presentation/: Ryabykin_Argobots_08_04.pptx
26_12_presentation/: Ryabykin_Argobots_26_12.pptx
27_11_results_and_presentaion/: Argobots Reduction.pptx  Argobots values.xlsx  OpenMP values.xlsx
aggregated_results_argobots/: aggregated_results_argobots_21_11.txt
aggregated_results_openmp/: aggregated_results_openmp_21_11.txt
argobots_framework/: configure.ac
argobots_framework/examples/workstealing_scheduler/: .gitignore  Makefile.am  Makefile.local  abt_workstealing_scheduler_cost_aware.c  abt_workstealing_scheduler_cost_aware.h  benchmark_test_0  benchmark_test_0.c  benchmark_test_1  benchmark_test_1.c  benchmark_test_2  benchmark_test_2.c  benchmark_test_3  benchmark_test_3.c  benchmark_test_4  benchmark_test_4.c  compare_schedulers_real  compare_schedulers_real.c  run_benchmark.sh  scheduler_comparison_results.csv  workstealing_scheduler.c  workstealing_scheduler_compare  workstealing_scheduler_cost_aware  workstealing_scheduler_cost_aware.c
argobots_framework/examples/workstealing_scheduler/benchmark_results/: summary_20251218_120721.txt  summary_20251218_145025.txt  summary_20260212_024331.txt  summary_20260212_025216.txt  summary_20260212_030441.txt  summary_20260219_134133.txt  summary_20260305_155234.txt
benchmark_results_existing_20260305_150111/: cg_argobots_fixed_summary.csv
benchmark_results_existing_20260305_151434/: cg.A.x_old_x1_t1.txt  cg.A.x_old_x2_t4.txt  cg.A.x_old_x4_t8.txt  cg.B.x_old_x1_t1.txt  cg.B.x_old_x2_t4.txt  (+2 more)
(+4531 files in other folders)
